--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9452,6 +9452,58 @@ let result=mostCommonWord(paragraph,banned);
 console.log(result);
 ```
 
+## 821.字符的最短距离
+
+给你一个字符串 s 和一个字符 c ，且 c 是 s 中出现过的字符。
+
+返回一个整数数组 answer ，其中 answer.length == s.length 且 answer[i] 是 s 中从下标 i 到离它 最近 的字符 c 的 距离 。
+
+两个下标 i 和 j 之间的 距离 为 abs(i - j) ，其中 abs 是绝对值函数。
+
+ 
+
+提示：
+1 <= s.length <= 104
+s[i] 和 c 均为小写英文字母
+题目数据保证 c 在 s 中至少出现一次
+
+```js
+/**
+ * @param {string} s
+ * @param {character} c
+ * @return {number[]}
+ */
+var shortestToChar = function(s, c) {
+    let n=s.length;
+    let ans=new Array(n).fill(0);
+    let leftIndex=s.indexOf(c);
+    let rightIndex=s.indexOf(c,leftIndex+1);
+    let d1,d2;
+    for(let i=0;i<n;i++){
+        d1=Math.abs(i-leftIndex);
+        if (rightIndex!==-1) {
+            d2=Math.abs(i-rightIndex)
+            if (d1<d2) {
+                ans[i]=d1;
+            }else{
+                ans[i]=d2;
+            }
+            if (i===rightIndex) {
+                leftIndex=rightIndex;
+                rightIndex=s.indexOf(c,leftIndex+1);
+            }
+        }else{
+            ans[i]=d1;
+        }
+    }
+    return ans;
+};
+
+let s = "loveleetcode", c = "e";
+let result=shortestToChar(s,c);
+console.log(result);
+```
+
 
 
 ## 825. 适龄的朋友
