--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -2789,44 +2789,455 @@ for (let i = 0; i < btns.length; i++) {
 
 1. Function.prototype.bind,这样就可以让所有函数的隐式原型上都会有一个bind了。
 
-```
-Function.prototype.bind = ``function``() {``  ``// TODO``}
-```
-
-1. bind的第一个形参是要绑定给函数的上下文，所以再完善一下上面的代码
-
-```
-Function.prototype.bind = ``function``(context) {``  ``var` `fn = ``this``;``  ``return` `function``() {``    ``return` `fn.apply(context);``  ``}``}
-```
-
-1. 真正的bind函数是可以传递多个参数的，第一个参数是要绑定给调用它的函数的上下文，其他的参数将会作为预设参数传递给这个函数，如下所示
+```js
+Function.prototype.bind = function() {
+    // TODO
+}
 
 ```
-let foo = ``function``(){``  ``console.log(arguments);``}``foo.bind(``null``,``"a"``,``"b"``)(``"c"``,``"d"``,``"e"``); ``// {"1":"a","2":"b","3":"c","4":"d","5":"e"}
+
+2. bind的第一个形参是要绑定给函数的上下文，所以再完善一下上面的代码
+
+```js
+Function.prototype.bind = function(context) {
+    var fn = this;
+    return function() {
+        return fn.apply(context);
+    }
+}
 ```
 
-1. 为了实现上面的效果，我们发现只要在返回的值上将函数合并上去就行了
+3. 真正的bind函数是可以传递多个参数的，第一个参数是要绑定给调用它的函数的上下文，其他的参数将会作为预设参数传递给这个函数，如下所示
+
+```js
+let foo = function(){
+    console.log(arguments);
+}
+foo.bind(null,"a","b")("c","d","e"); // {"1":"a","2":"b","3":"c","4":"d","5":"e"}
 
 ```
-Function.prototype.bind = ``function``(context, ...args) {``  ``var` `fn = ``this``;``  ``return` `function``(...rest) {``    ``return` `fn.apply(context,[...args, ...rest]);``  ``}``}
+
+4. 为了实现上面的效果，我们发现只要在返回的值上将函数合并上去就行了
+
+```js
+Function.prototype.bind=function(context,...args){
+    var fn=this;
+    return function(...rest){
+        return fn.apply(context,[...args,...rest]);
+    }
+}
+
+let foo=function(){
+    console.log(arguments);
+}
+
+foo.bind(null,"a","b")("c","d","e");  //[Arguments] { '0': 'a', '1': 'b', '2': 'c', '3': 'd', '4': 'e' }
 ```
 
-1. 为了兼容性，替换成ES5的写法
+5. 为了兼容性，替换成ES5的写法
 
-```
-Function.prototype.bind = ``function``() {``  ``var` `args = Array.prototype.slice.call(arguments);``  ``var` `context = args.splice(0,1)[0];``  ``var` `fn = ``this``;``  ``return` `function``() {``    ``let rest = Array.prototype.slice.call(arguments);``    ``return` `fn.apply(context, args.concat(rest));``  ``}``}
+```js
+Function.prototype.bind=function(context,...args){
+    var args=Array.prototype.slice.call(arguments);
+    var context=args.splice(0,1)[0];
+    var fn=this;
+    return function(){
+        let rest=Array.prototype.slice.call(arguments);
+        return fn.apply(context,args.concat(rest));
+    }
+}
+
+let foo=function(){
+    console.log(arguments);
+}
+
+foo.bind(null,"a","b")("c","d","e");  //[Arguments] { '0': 'a', '1': 'b', '2': 'c', '3': 'd', '4': 'e' }
 ```
 
-1. 把函数的原型保留下来。
+6. 把函数的原型保留下来。
 
-```
-Function.prototype.bind = ``function``() {``  ``var` `args = Array.prototype.slice.call(arguments);``  ``var` `context = args.splice(0,1)[0];``  ``var` `fn = ``this``;``  ``var` `res = ``function``() {``    ``let rest = Array.prototype.slice.call(arguments);``    ``return` `fn.apply(context, args.concat(rest));``  ``}``  ``if``(``this``.prototype) {``    ``res.prototype = ``this``.prototype;``  ``}``  ``return` `res;``}
+```js
+Function.prototype.bind=function(context,...args){
+    var args=Array.prototype.slice.call(arguments);
+    var context=args.splice(0,1)[0];
+    var fn=this;
+    var res=function(){
+        let rest=Array.prototype.slice.call(arguments);
+        return fn.apply(context,args.concat(rest));
+    }
+    if (this.prototype) {
+        res.prototype=this.prototype;
+    }
+    return res;
+}
+
+let foo=function(){
+    console.log(arguments);
+}
+
+foo.bind(null,"a","b")("c","d","e");  //[Arguments] { '0': 'a', '1': 'b', '2': 'c', '3': 'd', '4': 'e' }
 ```
 
-1. 最后还需要再找到一种方法来判断是否对bind之后的结果使用了new操作符。
+7. 最后还需要再找到一种方法来判断是否对bind之后的结果使用了new操作符。
 
-[复制代码](https://www.nowcoder.com/tutorial/96/1678a0fd35cd4db486af18589e34e4d4#)
+```js
+Function.prototype.bind=function(context,...args){
+    var args=Array.prototype.slice.call(arguments);
+    var context=args.splice(0,1)[0];
+    var fn=this;
+    var noop=function(){}
+    var res=function(){
+        let rest=Array.prototype.slice.call(arguments);
+        // this只和运行的时候有关系，所以这里的this和上面的fn不是一码事，new res()和res()在调用的时候，res中的this是不同的东西
+        return fn.apply(this instanceof noop ? this : context,args.concat(rest));
+    }
+    if (this.prototype) {
+        noop.prototype=this.prototype;
+    }
+    res.prototype=new noop();
+    return res;
+}
 
+let foo=function(){
+    console.log(arguments);
+}
+
+foo.bind(null,"a","b")("c","d","e");  //[Arguments] { '0': 'a', '1': 'b', '2': 'c', '3': 'd', '4': 'e' }
 ```
-Function.prototype.bind = ``function``() {``  ``var` `args = Array.prototype.slice.call(arguments);``  ``var` `context = args.splice(0,1)[0];``  ``var` `fn = ``this``;``  ``var` `noop = ``function``() {}``  ``var` `res = ``function``() {``    ``let rest = Array.prototype.slice.call(arguments);``    ``// this只和运行的时候有关系，所以这里的this和上面的fn不是一码事，new res()和res()在调用的时      候，res中的this是不同的东西``    ``return` `fn.apply(``this` `instanceof` `noop ? ``this` `: context, args.concat(rest));``  ``}``  ``if``(``this``.prototype) {``    ``noop.prototype = ``this``.prototype;``  ``}``  ``res.prototype = ``new` `noop();``  ``return` `res;``}
+
+------
+
+#### 4.4 箭头函数能否当构造函数
+
+**参考答案：**
+
+**箭头函数表达式**的语法比函数表达式更简洁，并且没有自己的this，arguments，super或new.target。箭头函数表达式更适用于那些本来需要匿名函数的地方，并且它不能用作构造函数。
+
+------
+
+#### 4.5 继承，优缺点
+
+**参考答案：**
+
+- 继承的好处
+  - a：提高了代码的复用性
+  - b：提高了代码的维护性
+  - c：让类与类之间产生了关系，是多态的前提
+- 继承的弊端
+  - 类的耦合性增强了,但是开发的原则：高内聚，低耦合。
+
+------
+
+#### 4.6 js继承的方法和优缺点
+
+**参考答案：**
+
+1. 原型链继承
+
+   **实现方式**：将子类的原型链指向父类的对象实例
+
+   ```js
+   function Parent(){
+       this.name="parent";
+       this.list=["a"];
+   }
+   Parent.prototype.sayHi=function(){
+       console.log("Hello!");
+   }
+   
+   function Child(){}
+   Child.prototype=new Parent();
+   
+   var child=new Child();
+   console.log(child.name);  //parent
+   child.sayHi();  //Hello!
+   
+   var a=new Child();
+   var b=new Child();
+   a.list.push("b");
+   console.log(b.list);  //[ 'a', 'b' ]
+   ```
+
+   **原理**：子类实例child的`__proto__`指向Child的原型链prototype，而Child.prototype指向Parent类的对象实例，该父类对象实例的`__proto__`指向Parent.prototype,所以Child可继承Parent的构造函数属性、方法和原型链属性、方法
+
+   **优点**：可继承构造函数的属性，父类构造函数的属性，父类原型的属性
+
+   **缺点**：无法向父类构造函数传参；且所有实例共享父类实例的属性，若父类共有属性为引用类型，一个子类实例更改父类构造函数共有属性时会导致继承的共有属性发生变化.
+
+   
+
+   
+
+2. 构造函数继承
+
+   **实现方式**：在子类构造函数中使用call或者apply劫持父类构造函数方法，并传入参数
+
+   ```js
+   function Parent(name,id){
+       this.id=id;
+       this.name=name;
+       this.list=["a"];
+       this.printName=function(){
+           console.log(this.name);
+       }
+   }
+   Parent.prototype.sayName=function(){
+       console.log(this.name);
+   }
+   
+   function Child(name,id){
+       Parent.call(this,name,id);
+       // Parent.apply(this, arguments);
+   }
+   
+   var child=new Child("kop",26);
+   child.printName();  //kop
+   child.sayName();  //TypeError: child.sayName is not a function
+   
+   ```
+
+   **原理**：使用call或者apply**更改子类函数的作用域**，使this执行父类构造函数，子类因此可以继承父类共有属性
+
+   **优点**：可解决原型链继承的缺点
+
+   **缺点**：不可继承父类的原型链方法，构造函数不可复用
+
+   
+
+3. 组合继承
+
+   **原理**：综合使用构造函数继承和原型链继承
+
+   ```js
+   function Parent(name,id){
+       this.id=id;
+       this.name=name;
+       this.list=["a"];
+       this.printName=function(){
+           console.log(this.name);
+       }
+   }
+   Parent.prototype.sayName=function(){
+       console.log(this.name);
+   }
+   
+   function Child(name,id){
+       Parent.call(this,name,id);
+       // Parent.apply(this, arguments);
+   }
+   Child.prototype=new Parent();
+   
+   var child=new Child("kop",26);
+   child.printName();  //kop
+   child.sayName();  //kop
+   
+   var a=new Child();
+   var b=new Child();
+   a.list.push("b");
+   console.log(a.list);  //[ 'a', 'b' ]
+   console.log(b.list);  //[ 'a' ]
+   ```
+
+   **优点**：可继承父类原型上的属性，且可传参；每个新实例引入的构造函数是私有的
+
+   **缺点**：会执行两次父类的构造函数，消耗较大内存，子类的构造函数会代替原型上的那个父类构造函数
+
+   
+
+4. 原型式继承
+
+   **原理**：类似Object.create，用一个函数包装一个对象，然后返回这个函数的调用，这个函数就变成了个可以随意增添属性的实例或对象，结果是将子对象的__proto__指向父对象
+
+   ```js
+   var parent = {
+     names: ['a']
+   }
+   function copy(object) {
+     function F() {}
+     F.prototype = object;    
+     return new F();
+   }
+   var child = copy(parent);
+   
+   ```
+
+   缺点：共享引用类型
+
+   
+
+5. 寄生式继承
+
+   原理：二次封装原型式继承，并拓展
+
+   ```js
+   function createObject(obj) {
+     var o = copy(obj);
+     o.getNames = function() {
+       console.log(this.names);
+       return this.names;
+     }
+     return o;
+   }
+   ```
+
+   优点：可添加新的属性和方法
+
+   
+
+6. 寄生组合式继承
+
+   原理：改进组合继承，利用寄生式继承的思想继承原型
+
+   ```js
+   function inheritPrototype(subClass, superClass) {
+     // 复制一份父类的原型
+     var p = copy(superClass.prototype);
+     // 修正构造函数
+     p.constructor = subClass;
+     // 设置子类原型
+     subClass.prototype = p;
+   }
+   
+   function Parent(name, id){
+     this.id = id;
+     this.name = name;
+     this.list = ['a'];
+     this.printName = function(){
+       console.log(this.name);
+     }
+   }
+   Parent.prototype.sayName = function(){
+     console.log(this.name);
+   };
+   function Child(name, id){
+     Parent.call(this, name, id);
+     // Parent.apply(this, arguments);
+   }
+   inheritPrototype(Child, Parent);
+   
+   ```
+
+   ------
+
+   
+
+#### 4.7 new会发生什么
+
+**参考答案：**
+
+1. 创建空对象；
+   var obj = {};
+
+2. 设置新对象的constructor属性为构造函数的名称，设置新对象的**proto**属性指向构造函数的prototype对象；
+   obj.**proto** = ClassA.prototype;
+   扩展了新对象的原型链。
+
+3. 使用新对象调用函数，函数中的this被指向新实例对象：
+   ClassA.call(obj);　　//{}.构造函数();
+
+4. 返回this指针。当存在显示的返回时，返回return后面的内容。新建的空对象作废。
+
+   ```js
+   function test() {
+    	this.name = "test";
+    }
+    test.prototype = {
+    	a:{},
+    	b:{}
+    }
+   
+   var  c = new test();
+   ```
+
+**`new`** 关键字会进行如下的操作：
+
+1. 创建一个空的简单JavaScript对象（即`**{}**`）；
+2. 为步骤1新创建的对象添加属性`**__proto__**`，将该属性链接至构造函数的原型对象 ；
+3. 将步骤1新创建的对象作为`**this**`的上下文 ；
+4. 如果该函数没有返回对象，则返回`**this**`。
+
+（译注：关于对象的 `**constructor**`，参见 `**Object.prototype.constructor**`）
+
+创建一个用户自定义的对象需要两步：
+
+1. 通过编写函数来定义对象类型。
+2. 通过 `new` 来创建对象实例。
+
+创建一个对象类型，需要创建一个指定其名称和属性的函数；对象的属性可以指向其他对象
+
+------
+
+## 文件引入方式
+
+------
+
+#### 5.1 link 和 @import
+
+作用：样式的导入方式
+
+link 的使用
+
+```html
+<link href="index.css" rel="stylesheet">
 ```
+
+@import 的使用
+
+```html
+<style type="text/css">
+	@import url(index.css);
+</style>
+```
+
+link 和 @import 的**区别**
+
+1. 引入的内容不同
+
+   link 除了引用样式文件，还可以引用图片等资源文件，而 @import 只引用样式文件
+
+2. 加载顺序不同
+
+   link 引用 CSS 时，在页面载入时同时加载；@import 需要页面网页完全载入以后加载
+
+3. 兼容性不同
+
+   link 是 XHTML 标签，无兼容问题；@import 是在 CSS2.1 提出的，低版本的浏览器不支持
+
+4. 对 JS 的支持不同
+
+   link 支持使用 Javascript 控制 DOM 去改变样式；而 @import 不支持
+
+------
+
+#### 5.2 为什么link用href获取资源 ,script和img用src
+
+**参考答案：**
+
+src用于替换当前元素，href用于在当前文档和引用资源之间确立联系。
+
+src
+
+- src是source的缩写，指向外部资源的位置，指向的内容将会嵌入到文档中当前标签所在位置；在请求src资源时会将其指向的资源下载并应用到文档内，例如js脚本，img图片和frame等元素
+
+  ```html
+  <script src ="js.js"></script> 
+  ```
+
+当浏览器解析到该元素时，**会暂停其他资源的下载和处理**，直到将该资源加载、编译、执行完毕，图片和框架 等元素也如此，类似于将所指向资源嵌入当前标签内。**这也是为什么将js脚本放在底部而不是头部**
+
+href
+
+- href是Hypertext Reference的缩写，指向网络资源所在位置，建立和当前元素（锚点）或当前文档（链接）之间的链接
+
+- 在文档中添加link标签，浏览器会识别该文档为css文件，就会并行下载资源并且**不会**停止对当前文档的处理。这也是为什么建议使用link方式来加载css，而不是使用@import方式
+
+  ```html
+  <link href="common.css" rel="stylesheet"/>
+  ```
+
+------
+
+## ES5，ES6
+
+------
+
