--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -1,3 +1,5 @@
+来自牛客前端校招面试宝典 https://www.nowcoder.com/tutorial/96/4b00158bec04471ea22e7713e0e4301b
+
 # 前端基础
 
 ------
@@ -3652,3 +3654,579 @@ console.log(arr2); //[0, [100,11,111], 2]
 
 -------
 
+#### 7.2 宏微队列及执行顺序
+
+**参考答案：**
+
+JS 中用来存储待执行回调函数的队列包含 2 个不同特定的列队
+
+- **宏列队**：用来保存待执行的宏任务（回调），比如：定时器回调、DOM 事件回调、ajax 回调
+- **微列队**：用来保存待执行的微任务（回调），比如：promise的回调、MutationObserver 的回调
+
+JS 执行时会区别这 2 个队列
+
+- JS 引擎首先必须先执行所有的初始化同步任务代码
+- 每次准备取出第一个宏任务执行前, 都要将所有的微任务一个一个取出来执行，也就是优先级比宏任务高，且与微任务所处的代码位置无关
+
+下面这个例子可以看出**Promise要先于setTimeout执行**：
+
+```js
+　　setTimeout(() => { //立即放入宏队列
+      console.log('timeout callback1（）')
+      Promise.resolve(3).then(
+        value => { //立即放入微队列
+          console.log('Promise onResolved3()', value)
+        }
+      )
+    }, 0)
+
+    setTimeout(() => { //立即放入宏队列
+      console.log('timeout callback2（）')
+    }, 0)
+
+    Promise.resolve(1).then(
+      value => { //立即放入微队列
+        console.log('Promise onResolved1()', value)
+        setTimeout(() => {
+          console.log('timeout callback3（）', value)
+        }, 0)
+      }
+    )
+
+    Promise.resolve(2).then(
+      value => { //立即放入微队列
+        console.log('Promise onResolved2()', value)
+      }
+    )
+
+    // Promise onResolved1() 1
+    // Promise onResolved2() 2
+    // timeout callback1（）
+    // Promise onResolved3() 3
+    // timeout callback2（）
+    // timeout callback3（） 1
+```
+
+------
+
+#### 7.3 死锁
+
+**参考答案：**
+
+死锁是指两个或两个以上的进程在执行过程中，由于竞争资源而造成阻塞的现象，若无外力作用，它们都将无法继续执行
+
+产生原因
+
+- 竞争资源引起进程死锁
+- 可剥夺和非剥夺资源
+- 竞争非剥夺资源
+- 竞争临时性资源
+- 进程推进顺序不当
+
+产生条件
+
+1. 互斥条件：涉及的资源是非共享的
+   - 涉及的资源是非共享的,一段时间内某资源只由一个进程占用,如果此时还有其它进程请求资源，则请求者只能等待，直至占有资源的进程用毕释放
+2. 不剥夺条件：不能强行剥夺进程拥有的资源
+   - 进程已获得的资源，在未使用完之前，不能被剥夺，只能在使用完时由自己释放
+3. 请求和保持条件：进程在等待一新资源时继续占有已分配的资源
+   - 指进程已经保持至少一个资源，但又提出了新的资源请求，而该资源已被其它进程占有，此时请求进程阻塞，但又对自己已获得的其它资源保持不放 环路等待条件：存在一种进程的循环链，链中的每一个进程已获得的资源同时被链中的下一个进程所请求 在发生死锁时，必然存在一个进程——资源的环形链
+
+解决办法
+
+只要打破四个必要条件之一就能有效预防死锁的发生
+
+------
+
+#### 7.4 暂时性死区
+
+**参考答案：**
+
+暂时性死区的本质就是，只要一进入当前作用域，所要使用的变量就已经存在了，但是不可获取，只有等到声明变量的那一行代码出现，才可以获取和使用该变量。
+
+**扩展：**
+
+let 、const与暂时性死区
+
+let或const声明的变量拥有暂时性死区（TDZ）：当进入它的作用域，它不能被访问（获取或设置）直到执行到达声明。
+
+首先看看**不具有暂时性死区的var**：
+
+- 当进入var变量的作用域（包围它的函数），立即为它创建（绑定）存储空间。变量会立即被初始化并赋值为undefined。
+- 当执行到变量声明的时候，如果变量定义了值则会被赋值。
+
+通过**let声明的变量拥有暂时性死区**，生命周期如下：
+
+- 当进入let变量的作用域（包围它的语法块），立即为它创建（绑定）存储空间。此时变量仍是未初始化的。
+- 获取或设置未初始化的变量将抛出异常ReferenceError。
+- 当执行到变量声明的时候，如果变量定义了值则会被赋值。如果没有定义值，则赋值为undefined。
+
+**const工作方式与let类似，但是定义的时候必须赋值并且不能改变**。
+
+在 TDZ 内部，如果获取或设置变量将抛出异常：
+
+```js
+if (true) { // enter new scope, TDZ starts
+    // Uninitialized binding for `tmp` is created
+
+    tmp = 'abc'; // ReferenceError
+    console.log(tmp); // ReferenceError
+
+    let tmp; // TDZ ends, `tmp` is initialized with `undefined`
+    console.log(tmp); // undefined
+
+    tmp = 123;
+    console.log(tmp); // 123
+}
+```
+
+下面的示例将演示死区（dead zone）是真正短暂的（基于时间）和不受空间条件限制（基于位置）
+
+```js
+if (true) { // enter new scope, TDZ starts
+    const func = function () {
+        console.log(myVar); // OK!
+    };
+
+    // Here we are within the TDZ and
+    // accessing `myVar` would cause a `ReferenceError`
+
+    let myVar = 3; // TDZ ends
+    func(); // called outside TDZ
+}
+```
+
+typeof与暂时性死区
+
+变量在暂时性死区无法被访问，所以无法对它使用typeof：
+
+```js
+if (true) {
+    console.log(typeof tmp); // ReferenceError
+    let tmp;
+}
+```
+
+------
+
+#### 7.5 面向对象的三个特征，分别说一下什么意思
+
+**参考答案：**
+
+概念：
+
+**封装：**将对象运行所需的资源封装在程序对象中——基本上，是方法和数据。对象是“公布其接口”。其他附加到这些接口上的对象不需要关心对象实现的方法即可使用这个对象。这个概念就是“不要告诉我你是怎么做的，只要做就可以了。”对象可以看作是一个自我包含的原子。对象接口包括了公共的方法和初始化数据。
+
+**继承：** 继承可以解决代码复用，让编程更加靠近人类思维。当多个类存在相同的属性(变量)和方法时，可以从这些类中抽象出父类，在父类中定义这些相同的属性和方法，所有的子类不需要重新定义这些属性和方法，只需要通过继承父类中的属性和方法。
+
+**多态：** 多态是指一个引用(类型)在不同情况下的多种状态。也可以理解成：多态是指通过指向父类的引用，来调用在不同子类中实现的方法。
+
+特点：
+
+**封装**可以隐藏实现细节，使得代码模块化；
+
+**继承**可以扩展已存在的代码模块（类），它们的目的都是为了——代码重用。
+
+**多态**就是相同的事物，调用其相同的方法，参数也相同时，但表现的行为却不同。多态分为两种，一种是行为多态与对象的多态
+
+------
+
+## 应用
+
+#### 8.1 文件异步上传怎么实现
+
+**参考答案：**
+
+1. 普通表单上传
+
+使用PHP来展示常规的表单上传是一个不错的选择。首先构建文件上传的表单，并指定表单的提交内容类型为enctype="multipart/form-data"，表明表单需要上传二进制数据。
+
+```html
+<form action="/index.php" method="POST" enctype="multipart/form-data">
+  <input type="file" name="myfile">
+  <input type="submit">
+</form>
+```
+
+然后编写index.php上传文件接收代码，使用move_uploaded_file方法即可(php大法好...)
+
+```php
+$imgName = 'IMG'.time().'.'.str_replace('image/','',$_FILES["myfile"]['type']);
+$fileName =  'upload/'.$imgName;
+// 移动上传文件至指定upload文件夹下，并根据返回值判断操作是否成功
+if (move_uploaded_file($_FILES['myfile']['tmp_name'], $fileName)){
+    echo $fileName;
+}else {
+    echo "nonn";
+}
+```
+
+form表单上传大文件时，很容易遇见服务器超时的问题。通过xhr，前端也可以进行异步上传文件的操作，一般由两个思路。
+
+2. 文件编码上传
+
+第一个思路是将文件进行编码，然后在服务端进行解码，在前端实现图片压缩上传的方法，其主要实现原理就是将图片转换成base64进行传递
+
+```js
+var imgURL = URL.createObjectURL(file);
+ctx.drawImage(imgURL, 0, 0);
+// 获取图片的编码，然后将图片当做是一个很长的字符串进行传递
+var data = canvas.toDataURL("image/jpeg", 0.5); 
+```
+
+在服务端需要做的事情也比较简单，首先解码base64，然后保存图片即可
+
+```php
+$imgData = $_REQUEST['imgData'];
+$base64 = explode(',', $imgData)[1];
+$img = base64_decode($base64);
+$url = './test.jpg';
+if (file_put_contents($url, $img)) {
+    exit(json_encode(array(
+        url => $url
+    )));
+}
+```
+
+base64编码的缺点在于其体积比原图片更大（因为Base64将三个字节转化成四个字节，**因此编码后的文本，会比原文本大出三分之一左右），对于体积很大的文件来说，上传和解析的时间会明显增加**。
+
+更多关于base64的知识，可以参考Base64笔记。
+
+除了进行base64编码，还可以在前端直接读取文件内容后以二进制格式上传
+
+```js
+// 读取二进制文件
+function readBinary(text){
+   var data = new ArrayBuffer(text.length);
+   var ui8a = new Uint8Array(data, 0);
+   for (var i = 0; i < text.length; i++){ 
+     ui8a[i] = (text.charCodeAt(i) & 0xff);
+   }
+   console.log(ui8a)
+}
+
+var reader = new FileReader();
+reader.onload = function(){
+      readBinary(this.result) // 读取result或直接上传
+}
+// 把从input里读取的文件内容，放到fileReader的result字段里
+reader.readAsBinaryString(file);
+```
+
+3. formData异步上传
+
+FormData对象主要用来组装一组用 XMLHttpRequest发送请求的键/值对，可以更加灵活地发送Ajax请求。可以使用FormData来模拟表单提交。
+
+```js
+let files = e.target.files // 获取input的file对象
+let formData = new FormData();
+formData.append('file', file);
+axios.post(url, formData);
+```
+
+服务端处理方式与直接form表单请求基本相同。
+
+4. iframe无刷新页面
+
+在低版本的浏览器（如IE）上，xhr是不支持直接上传formdata的，因此只能用form来上传文件，而form提交本身会进行页面跳转，这是因为form表单的[target](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/form)属性导致的，其取值有
+
+- _self，默认值，在相同的窗口中打开响应页面
+- _blank，在新窗口打开
+- _parent，在父窗口打开
+- _top，在最顶层的窗口打开
+- framename，在指定名字的iframe中打开
+
+如果需要让用户体验异步上传文件的感觉，可以通过framename指定iframe来实现。把form的target属性设置为一个看不见的iframe，那么返回的数据就会被这个iframe接受，因此只有该iframe会被刷新，至于返回结果，也可以通过解析这个iframe内的文本来获取。
+
+```js
+function upload(){
+    var now = +new Date()
+    var id = 'frame' + now
+    $("body").append(`<iframe style="display:none;" name="${id}" id="${id}" />`);
+
+    var $form = $("#myForm")
+    $form.attr({
+        "action": '/index.php',
+        "method": "post",
+        "enctype": "multipart/form-data",
+        "encoding": "multipart/form-data",
+        "target": id
+    }).submit()
+
+    $("#"+id).on("load", function(){
+        var content = $(this).contents().find("body").text()
+        try{
+            var data = JSON.parse(content)
+        }catch(e){
+            console.log(e)
+        }
+    })
+}
+```
+
+**扩展：**
+
+**大文件上传**
+
+现在来看看在上面提到的几种上传方式中实现大文件上传会遇见的超时问题，
+
+- 表单上传和iframe无刷新页面上传，实际上都是通过form标签进行上传文件，这种方式将整个请求完全交给浏览器处理，当上传大文件时，可能会遇见请求超时的情形
+- 通过fromData，其实际也是在xhr中封装一组请求参数，用来模拟表单请求，无法避免大文件上传超时的问题
+- 编码上传，我们可以比较灵活地控制上传的内容
+
+大文件上传最主要的问题就在于：**在同一个请求中，要上传大量的数据，导致整个过程会比较漫长，且失败后需要重头开始上传**。试想，如果我们将这个请求拆分成多个请求，每个请求的时间就会缩短，且如果某个请求失败，只需要重新发送这一次请求即可，无需从头开始，这样是否可以解决大文件上传的问题呢？
+
+综合上面的问题，看来大文件上传需要实现下面几个需求
+
+- 支持拆分上传请求(即切片)
+- 支持断点续传
+- 支持显示上传进度和暂停上传
+
+接下来让我们依次实现这些功能，看起来最主要的功能应该就是切片了。
+
+**文件切片**
+
+编码方式上传中，在前端我们只要先获取文件的二进制内容，然后对其内容进行拆分，最后将每个切片上传到服务端即可。
+
+在JavaScript中，文件FIle对象是Blob对象的子类，Blob对象包含一个重要的方法slice，通过这个方法，我们就可以对二进制文件进行拆分。
+
+下面是一个拆分文件的示例
+
+```js
+function slice(file, piece = 1024 * 1024 * 5) {
+ let totalSize = file.size; // 文件总大小
+ let start = 0; // 每次上传的开始字节
+ let end = start + piece; // 每次上传的结尾字节
+ let chunks = []
+ while (start < totalSize) {
+ // 根据长度截取每次需要上传的数据
+ // File对象继承自Blob对象，因此包含slice方法
+ let blob = file.slice(start, end); 
+ chunks.push(blob)
+ start = end;
+ end = start + piece;
+ }
+ return chunks
+}
+```
+
+将文件拆分成piece大小的分块，然后每次请求只需要上传这一个部分的分块即可
+
+```js
+let file = document.querySelector("[name=file]").files[0];
+const LENGTH = 1024 * 1024 * 0.1;
+let chunks = slice(file, LENGTH); // 首先拆分切片
+chunks.forEach(chunk=>{
+ let fd = new FormData();
+ fd.append("file", chunk);
+ post('/mkblk.php', fd)
+})
+
+```
+
+服务器接收到这些切片后，再将他们拼接起来就可以了，下面是PHP拼接切片的示例代码
+
+```php
+$filename = './upload/' . $_POST['filename'];//确定上传的文件名
+//第一次上传时没有文件，就创建文件，此后上传只需要把数据追加到此文件中
+if(!file_exists($filename)){
+ move_uploaded_file($_FILES['file']['tmp_name'],$filename);
+}else{
+ file_put_contents($filename,file_get_contents($_FILES['file']['tmp_name']),FILE_APPEND);
+ echo $filename;
+}
+
+```
+
+测试时记得修改nginx的server配置，否则大文件可能会提示413 Request Entity Too Large的错误。
+
+```bash
+server {
+    // ...
+    client_max_body_size 50m;
+}
+```
+
+上面这种方式来存在一些问题
+
+- 无法识别一个切片是属于哪一个切片的，当同时发生多个请求时，追加的文件内容会出错
+- 切片上传接口是异步的，无法保证服务器接收到的切片是按照请求顺序拼接的
+
+因此接下来我们来看看应该如何在服务端还原切片。
+
+**还原切片**
+
+在后端需要将多个相同文件的切片还原成一个文件，上面这种处理切片的做法存在下面几个问题
+
+- 如何识别多个切片是来自于同一个文件的，这个可以在每个切片请求上传递一个相同文件的context参数
+- 如何将多个切片还原成一个文件
+- 确认所有切片都已上传，这个可以通过客户端在切片全部上传后调用mkfile接口来通知服务端进行拼接
+- 找到同一个context下的所有切片，确认每个切片的顺序，这个可以在每个切片上标记一个位置索引值
+- 按顺序拼接切片，还原成文件
+
+上面有一个重要的参数，即context，我们需要获取为一个文件的唯一标识，可以通过下面两种方式获取
+
+- 根据文件名、文件长度等基本信息进行拼接，为了避免多个用户上传相同的文件，可以再额外拼接用户信息如uid等保证唯一性
+- 根据文件的二进制内容计算文件的hash，这样只要文件内容不一样，则标识也会不一样，缺点在于计算量比较大.
+
+修改上传代码，增加相关参数
+
+```js
+// 获取context，同一个文件会返回相同的值
+function createContext(file) {
+     return file.name + file.length
+}
+let file = document.querySelector("[name=file]").files[0];
+const LENGTH = 1024 * 1024 * 0.1;
+let chunks = slice(file, LENGTH);
+// 获取对于同一个文件，获取其的context
+let context = createContext(file);
+let tasks = [];
+chunks.forEach((chunk, index) => {
+ let fd = new FormData();
+ fd.append("file", chunk);
+ // 传递context
+ fd.append("context", context);
+ // 传递切片索引值
+ fd.append("chunk", index + 1);
+
+ tasks.push(post("/mkblk.php", fd));
+});
+// 所有切片上传完毕后，调用mkfile接口
+Promise.all(tasks).then(res => {
+ let fd = new FormData();
+ fd.append("context", context);
+ fd.append("chunks", chunks.length);
+ post("/mkfile.php", fd).then(res => {
+ console.log(res);
+ });
+});
+
+```
+
+在mkblk.php接口中，我们通过context来保存同一个文件相关的切片
+
+```php
+// mkblk.php
+$context = $_POST['context'];
+$path = './upload/' . $context;
+if(!is_dir($path)){
+ mkdir($path);
+}
+// 把同一个文件的切片放在相同的目录下
+$filename = $path .'/'. $_POST['chunk'];
+$res = move_uploaded_file($_FILES['file']['tmp_name'],$filename);
+
+```
+
+除了上面这种简单通过目录区分切片的方法之外，还可以将切片信息保存在数据库来进行索引。接下来是mkfile.php接口的实现，这个接口会在所有切片上传后调用
+
+```php
+// mkfile.php
+$context = $_POST['context'];
+$chunks = (int)$_POST['chunks'];
+//合并后的文件名
+$filename = './upload/' . $context . '/file.jpg'; 
+for($i = 1; $i <= $chunks; ++$i){
+ $file = './upload/'.$context. '/' .$i; // 读取单个切块
+ $content = file_get_contents($file);
+ if(!file_exists($filename)){
+ $fd = fopen($filename, "w+");
+ }else{
+ $fd = fopen($filename, "a");
+ }
+ fwrite($fd, $content); // 将切块合并到一个文件上
+}
+echo $filename;
+
+```
+
+这样就解决了上面的两个问题：
+
+- 识别切片来源
+- 保证切片拼接顺序
+
+**断点续传**
+
+即使将大文件拆分成切片上传，我们仍需等待所有切片上传完毕，在等待过程中，可能发生一系列导致部分切片上传失败的情形，如网络故障、页面关闭等。由于切片未全部上传，因此无法通知服务端合成文件。这种情况下可以通过**断点续传**来进行处理。
+
+断点续传指的是：可以从已经上传部分开始继续上传未完成的部分，而没有必要从头开始上传，节省上传时间。
+
+由于整个上传过程是按切片维度进行的，且mkfile接口是在所有切片上传完成后由客户端主动调用的，因此断点续传的实现也十分简单：
+
+- 在切片上传成功后，保存已上传的切片信息
+- 当下次传输相同文件时，遍历切片列表，只选择未上传的切片进行上传
+- 所有切片上传完毕后，再调用mkfile接口通知服务端进行文件合并
+
+因此问题就落在了如何保存已上传切片的信息了，保存一般有两种策略
+
+- 可以通过locaStorage等方式保存在前端浏览器中，这种方式不依赖于服务端，实现起来也比较方便，缺点在于如果用户清除了本地文件，会导致上传记录丢失
+- 服务端本身知道哪些切片已经上传，因此可以由服务端额外提供一个根据文件context查询已上传切片的接口，在上传文件前调用该文件的历史上传记录
+
+下面让我们通过在本地保存已上传切片记录，来实现断点上传的功能
+
+```js
+// 获取已上传切片记录
+function getUploadSliceRecord(context){
+ let record = localStorage.getItem(context)
+ if(!record){
+ return []
+ }else {
+ try{
+ return JSON.parse(record)
+ }catch(e){}
+ }
+}
+// 保存已上传切片
+function saveUploadSliceRecord(context, sliceIndex){
+ let list = getUploadSliceRecord(context)
+ list.push(sliceIndex)
+ localStorage.setItem(context, JSON.stringify(list))
+}
+
+```
+
+然后对上传逻辑稍作修改，主要是增加上传前检测是已经上传、上传后保存记录的逻辑
+
+```js
+let context = createContext(file);
+// 获取上传记录
+let record = getUploadSliceRecord(context);
+let tasks = [];
+chunks.forEach((chunk, index) => {
+ // 已上传的切片则不再重新上传
+ if(record.includes(index)){
+ return
+ }
+
+ let fd = new FormData();
+ fd.append("file", chunk);
+ fd.append("context", context);
+ fd.append("chunk", index + 1);
+ let task = post("/mkblk.php", fd).then(res=>{
+ // 上传成功后保存已上传切片记录
+ saveUploadSliceRecord(context, index)
+ record.push(index)
+ })
+ tasks.push(task);
+});
+
+```
+
+此时上传时刷新页面或者关闭浏览器，再次上传相同文件时，之前已经上传成功的切片就不会再重新上传了。
+
+服务端实现断点续传的逻辑基本相似，只要在getUploadSliceRecord内部调用服务端的查询接口获取已上传切片的记录即可，因此这里不再展开。
+
+此外断点续传还需要考虑**切片过期**的情况：如果调用了mkfile接口，则磁盘上的切片内容就可以清除掉了，如果客户端一直不调用mkfile的接口，放任这些切片一直保存在磁盘显然是不可靠的，一般情况下，切片上传都有一段时间的有效期，超过该有效期，就会被清除掉。基于上述原因，断点续传也必须同步切片过期的实现逻辑。
+
+**上传进度和暂停**
+
+通过xhr.upload中的progress方法可以实现监控每一个切片上传进度。
+
+上传暂停的实现也比较简单，通过xhr.abort可以取消当前未完成上传切片的上传，实现上传暂停的效果，恢复上传就跟断点续传类似，先获取已上传的切片列表，然后重新发送未上传的切片。
+
+由于篇幅关系，上传进度和暂停的功能这里就先不实现了。
+
+------
+
+#### 8.2 使用setInterval请求实时数据，返回顺序不一致怎么解决
