--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -4230,3 +4230,917 @@ chunks.forEach((chunk, index) => {
 ------
 
 #### 8.2 使用setInterval请求实时数据，返回顺序不一致怎么解决
+
+**参考答案：**
+
+场景：
+
+```js
+setInterval(function() {
+    $.get("/path/to/server", function(data, status) {
+        console.log(data);
+    });
+}, 10000);
+```
+
+上面的程序会每隔10秒向服务器请求一次数据，并在数据到达后存储。这个实现方法通常可以满足简单的需求，然而同时也存在着很大的缺陷：在网络情况不稳定的情况下，服务器从接收请求、发送请求到客户端接收请求的总时间有可能超过10秒，而请求是以10秒间隔发送的，这样会导致接收的数据到达先后顺序与发送顺序不一致。
+
+解决方案：
+
+1. 使用setTimeout代替setInterval
+
+   程序首先设置10秒后发起请求，当数据返回后再隔10秒发起第二次请求，以此类推。这样的话虽然无法保证两次请求之间的时间间隔为固定值，但是可以保证到达数据的顺序。
+
+   ```js
+   function poll() {
+       setTimeout(function() {
+           $.get("/path/to/server", function(data, status) {
+               console.log(data);
+               // 发起下一次请求
+               poll();
+           });
+       }, 10000);
+   }
+   ```
+
+   2. WebSocket
+
+   WebSocket 协议本质上是一个基于 TCP 的协议。
+
+   为了建立一个 WebSocket 连接，客户端浏览器首先要向服务器发起一个 HTTP 请求，这个请求和通常的 HTTP 请求不同，包含了一些附加头信息，其中附加头信息"Upgrade: WebSocket"表明这是一个申请协议升级的 HTTP 请求，服务器端解析这些附加的头信息然后产生应答信息返回给客户端，客户端和服务器端的 WebSocket 连接就建立起来了，双方就可以通过这个连接通道自由的传递信息，**并且这个连接会持续存在直到客户端或者服务器端的某一方主动的关闭连接。**
+
+   服务器（Node.js）：
+
+   ```js
+   var WebSocketServer = require('ws').Server;
+   var wss = new WebSocketServer({port: 8080});
+   
+   wss.on("connection", function(socket) {
+       socket.on("message", function(msg) {
+           console.log(msg);
+           socket.send("Nice to meet you!");
+       });
+   });
+   ```
+
+   客户端同样可以使用Node.js或者是浏览器实现，这里选用浏览器作为客户端：
+
+   ```js
+   // WebSocket 为客户端JavaScript的原生对象
+   var ws = new WebSocket("ws://localhost:8080");
+   ws.onopen = function (event) {
+       ws.send("Hello there!");
+   }
+   ws.onmessage = function (event) {
+       console.log(event.data);
+   }
+   ```
+
+------
+
+#### 8.3 防抖和节流的原理和使用场景
+
+**参考答案：**
+
+函数防抖和函数节流：优化高频率执行js代码的一种手段，js中的一些事件如浏览器的resize、scroll，鼠标的mousemove、mouseover，input输入框的keypress等事件在触发时，会不断地调用绑定在事件上的回调函数，极大地浪费资源，降低前端性能。为了优化体验，需要对这类事件进行调用次数的限制。
+
+**防抖：**
+
+**在事件被触发n秒后再执行回调**，如果在这n秒内又被触发，则重新计时。
+
+根据函数防抖思路设计出第一版的最简单的防抖代码：
+
+```js
+var timer; // 维护同一个timer
+function debounce(fn, delay) {
+    clearTimeout(timer);
+    timer = setTimeout(function(){
+        fn();
+    }, delay);
+}
+
+```
+
+上面例子中的debounce就是防抖函数，在document中鼠标移动的时候，会在onmousemove最后触发的1s后执行回调函数testDebounce；如果我们一直在浏览器中移动鼠标（比如10s），会发现会在10 + 1s后才会执行testDebounce函数（因为clearTimeout(timer)），这个就是**函数防抖**。
+
+在上面的代码中，会出现一个问题，var timer只能在setTimeout的父级作用域中，这样才是同一个timer，并且为了方便防抖函数的调用和回调函数fn的传参问题，**我们应该用闭包来解决这些问题**。
+
+优化后的代码：
+
+```js
+function debounce(fn, delay) {
+    var timer; // 维护一个 timer
+    return function () {
+        var _this = this; // 取debounce执行作用域的this
+        var args = arguments;
+        if (timer) {
+            clearTimeout(timer);
+        }
+        timer = setTimeout(function () {
+            fn.apply(_this, args); // 用apply指向调用debounce的对象，相当于_this.fn(args);
+        }, delay);
+    };
+}
+
+```
+
+使用闭包后，解决传参和封装防抖函数的问题，这样就可以在其他地方随便将需要防抖的函数传入debounce了。
+
+**节流：**
+
+每隔一段时间，只执行一次函数。
+
+- 定时器实现节流函数：
+
+  ```js
+  function throttle(fn, delay) {
+      var timer;
+      return function () {
+          var _this = this;
+          var args = arguments;
+          if (timer) {
+              return;
+          }
+          timer = setTimeout(function () {
+              fn.apply(_this, args);
+              timer = null; // 在delay后执行完fn之后清空timer，此时timer为假，throttle触发可以进入计时器
+          }, delay)
+      }
+  }
+  
+  ```
+
+  
+
+- 时间戳实现节流函数：
+
+  ```js
+  function throttle(fn, delay) {
+      var previous = 0;
+      // 使用闭包返回一个函数并且用到闭包函数外面的变量previous
+      return function() {
+          var _this = this;
+          var args = arguments;
+          var now = new Date();
+          if(now - previous > delay) {
+              fn.apply(_this, args);
+              previous = now;
+          }
+      }
+  }
+  
+  ```
+
+  
+
+**异同比较**
+
+相同点：
+
+- 都可以通过使用 setTimeout 实现。
+- 目的都是，**降低回调执行频率。节省计算资源**。
+
+不同点：
+
+- 函数防抖，在一段连续操作结束后，处理回调，**利用clearTimeout 和 setTimeout实现**。函数节流，在一段连续操作中，**每一段时间只执行一次**，频率较高的事件中使用来提高性能。
+- 函数防抖关注一定时间连续触发的事件只在最后执行一次，而函数节流侧重于一段时间内只执行一次。
+
+常见应用场景
+
+**函数防抖的应用场景:**
+
+连续的事件，只需触发一次回调的场景有：
+
+- 搜索框搜索输入。只需用户最后一次输入完，再发送请求
+- 手机号、邮箱验证输入检测
+- 窗口大小Resize。只需窗口调整完成后，计算窗口大小。防止重复渲染。
+
+**函数节流的应用场景:**
+
+间隔一段时间执行一次回调的场景有：
+
+- 滚动加载，加载更多或滚到底部监听
+- 谷歌搜索框，搜索联想功能
+- 高频点击提交，表单重复提交
+
+------
+
+#### 8.4 浅拷贝，深拷贝(实现方式)
+
+**参考答案：**
+
+浅拷贝和深拷贝都只针对于引用数据类型，**浅拷贝**只复制指向某个对象的指针，而不复制对象本身，新旧对象还是共享同一块内存；但**深拷贝**会另外创造一个一模一样的对象，新对象跟原对象不共享内存，修改新对象不会改到原对象；
+
+区别：浅拷贝只复制对象的第一层属性、深拷贝可以对对象的属性进行递归复制；
+
+实现**浅拷贝**方法
+
+（1）Object.assign方法
+
+```js
+var obj = {
+    a: 1,
+    b: 2
+}
+var obj1 = Object.assign({},obj);
+boj1.a = 3;
+console.log(obj.a) // 3
+```
+
+（2）for in方法
+
+```js
+// 只复制第一层的浅拷贝
+function simpleCopy(obj1) {
+   var obj2 = Array.isArray(obj1) ? [] : {};
+   for (let i in obj1) {
+   obj2[i] = obj1[i];
+  }
+   return obj2;
+}
+var obj1 = {
+   a: 1,
+   b: 2,
+   c: {
+         d: 3
+      }
+}
+var obj2 = simpleCopy(obj1);
+obj2.a = 3;
+obj2.c.d = 4;
+console.log(obj1.a); // 1
+console.log(obj2.a); // 3
+console.log(obj1.c.d); // 4
+console.log(obj2.c.d); // 4
+
+```
+
+实现**深拷贝**方法
+
+（1）采用递归去拷贝所有层级属性
+
+```js
+function deepClone(obj){
+    let objClone = Array.isArray(obj)?[]:{};
+    if(obj && typeof obj==="object"){
+        for(let key in obj){
+            if(obj.hasOwnProperty(key)){
+                //判断ojb子元素是否为对象，如果是，递归复制
+                if(obj[key]&&typeof obj[key] ==="object"){
+                    objClone[key] = deepClone(obj[key]);
+                }else{
+                    //如果不是，简单复制
+                    objClone[key] = obj[key];
+                }
+            }
+        }
+    }
+    return objClone;
+}    
+let a=[1,2,3,4];
+let b=deepClone(a);
+a[0]=2;
+console.log(a,b);  //[ 2, 2, 3, 4 ] [ 1, 2, 3, 4 ]
+
+```
+
+（2）使用JSON.stringify和JSON.parse实现深拷贝：JSON.stringify把对象转成字符串，再用JSON.parse把字符串转成新的对象；
+
+```js
+function deepCopy(obj1){
+    let _obj = JSON.stringify(obj1);
+    let obj2 = JSON.parse(_obj);
+    return obj2;
+}
+
+var a = [1, [1, 2], 3, 4];
+var b = deepCopy(a);
+b[1][0] = 2;
+console.log(a); // [ 1, [ 1, 2 ], 3, 4 ]
+console.log(b); // [ 1, [ 2, 2 ], 3, 4 ]3,4
+
+```
+
+（3）热门的函数库lodash，也有提供_.cloneDeep用来做深拷贝；
+
+```js
+var _ = require('lodash');
+var obj1 = {
+    a: 1,
+    b: { f: { g: 1 } },
+    c: [1, 2, 3]
+};
+var obj2 = _.cloneDeep(obj1);
+console.log(obj1.b.f === obj2.b.f);
+// false
+
+```
+
+------
+
+#### 8.5 获取当前页面url
+
+**参考答案：**
+
+1. window.location.href (设置或获取整个 URL 为字符串)
+
+```js
+let href=window.location.href;
+  console.log(href);  //http://127.0.0.1/test/test127.html
+```
+
+2. window.location.protocol (设置或获取 URL 的协议部分)
+
+```js
+ let protocol=window.location.protocol;
+  console.log(protocol);  //http:
+```
+
+3. window.location.host (设置或获取 URL 的主机部分)
+
+```js
+let host=window.location.host;
+  console.log(host);  //127.0.0.1
+```
+
+4. window.location.port (设置或获取与 URL 关联的端口号码)
+
+```js
+  let port=window.location.port;
+  ////返回：空字符(如果采用默认的80端口 (update:即使添加了:80)，那么返回值并不是默认的80而是空字符)
+  console.log(port);  //
+```
+
+5. window.location.pathname (设置或获取与 URL 的路径部分（就是文件地址）)
+
+```js
+let pathname=window.location.pathname;
+  console.log(pathname);  ///test/test127.html
+```
+
+6. window.location.search (设置或获取 href 属性中跟在问号后面的部分)
+
+```js
+  let search=window.location.search;
+  console.log(search);  //
+```
+
+7. window.location.hash (设置或获取 href 属性中在井号“#”后面的分段)
+
+```js
+  let hash=window.location.hash;
+  console.log(hash);
+```
+
+8. js获取url中的参数值*
+
+正则法
+
+```js
+ function getQueryString(name) {
+          var reg = new RegExp('(^|&)' + name + '=([^&]*)(&|$)', 'i');
+          var r = window.location.search.substr(1).match(reg);
+
+          if (r != null) {
+             return unescape(r[2]);
+          }
+          return null;
+  }
+// 这样调用：
+alert(GetQueryString("参数名1"));
+alert(GetQueryString("参数名2"));
+alert(GetQueryString("参数名3"));
+
+```
+
+split拆分法
+
+```js
+function GetRequest() {
+         var url = location.search; //获取url中"?"符后的字串
+         var theRequest = new Object();
+
+         if (url.indexOf("?") != -1) {
+                 var str = url.substr(1);
+                 strs = str.split("&");
+              for(var i = 0; i < strs.length; i ++) {
+                      theRequest[strs[i].split("=")[0]] = unescape(strs[i].split("=")[1]);
+               }
+         }
+     return theRequest;
+ }
+var Request = new Object();
+Request = GetRequest();
+// var id=Request["id"]; 
+// var 参数1,参数2,参数3,参数N;
+// 参数1 = Request['参数1'];
+// 参数2 = Request['参数2'];
+// 参数3 = Request['参数3'];
+// 参数N = Request['参数N'];
+
+```
+
+指定取
+比如说一个url：[http://i.cnblogs.com/?j=js](https://link.jianshu.com/?t=http://i.cnblogs.com/?j=js), 我们想得到参数j的值，可以通过以下函数调用。
+
+```js
+function GetQueryString(name) { 
+         var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i"); 
+         var r = window.location.search.substr(1).match(reg); //获取url中"?"符后的字符串并正则匹配
+         var context = ""; 
+
+     if (r != null) {
+         context = r[2]; 
+     }
+     
+    reg = null; 
+    r = null; 
+    return context == null || context == "" || context == "undefined" ? "" : context; 
+ }
+alert(GetQueryString("j"));
+
+```
+
+单个参数的获取方法
+
+```js
+function GetRequest() {
+         var url = location.search; //获取url中"?"符后的字串
+         if (url.indexOf("?") != -1) {? //判断是否有参数
+                  var str = url.substr(1); //从第一个字符开始 因为第0个是?号 获取所有除问号的所有符串
+                  strs = str.split("=");? //用等号进行分隔 （因为知道只有一个参数 
+                                          //所以直接用等号进分隔 如果有多个参数 要用&号分隔 再用等号进行分隔）
+                  alert(strs[1]);???? //直接弹出第一个参数 （如果有多个参数 还要进行循环的）
+         }
+  }
+
+```
+
+------
+
+#### 8.6 js中两个数组怎么取交集+(差集、并集、补集)
+
+**参考答案：**
+
+1. 最普遍的做法
+
+   使用 **ES5** 语法来实现虽然会麻烦些，但兼容性最好，不用考虑浏览器 **JavaScript** 版本。也不用引入其他第三方库。
+
+   直接使用 filter、concat 来计算
+
+   ```js
+   var a = [1,2,3,4,5]
+   var b = [2,4,6,8,10]
+   //交集
+   var c = a.filter(function(v){ return b.indexOf(v) > -1 })
+   //差集
+   var d = a.filter(function(v){ return b.indexOf(v) == -1 })
+   //补集
+   var e = a.filter(function(v){ return !(b.indexOf(v) > -1) })
+           .concat(b.filter(function(v){ return !(a.indexOf(v) > -1)}))
+   //并集
+   var f = a.concat(b.filter(function(v){ return !(a.indexOf(v) > -1)}));
+   
+   ```
+
+   对 Array 进行扩展
+
+   ```js
+   //数组功能扩展
+   //数组迭代函数
+   Array.prototype.each = function(fn){
+     fn = fn || Function.K;
+      var a = [];
+      var args = Array.prototype.slice.call(arguments, 1);
+      for(var i = 0; i < this.length; i++){
+          var res = fn.apply(this,[this[i],i].concat(args));
+          if(res != null) a.push(res);
+      }
+      return a;
+   };
+   
+   //数组是否包含指定元素
+   Array.prototype.contains = function(suArr){
+     for(var i = 0; i < this.length; i ++){
+         if(this[i] == suArr){
+             return true;
+         }
+      }
+      return false;
+   }
+   
+   //不重复元素构成的数组
+   Array.prototype.uniquelize = function(){
+      var ra = new Array();
+      for(var i = 0; i < this.length; i ++){
+         if(!ra.contains(this[i])){
+             ra.push(this[i]);
+         }
+      }
+      return ra;
+   };
+   
+   //两个数组的交集
+   Array.intersect = function(a, b){
+      return a.uniquelize().each(function(o){return b.contains(o) ? o : null});
+   };
+   
+   //两个数组的差集
+   Array.minus = function(a, b){
+      return a.uniquelize().each(function(o){return b.contains(o) ? null : o});
+   };
+   
+   //两个数组的补集
+   Array.complement = function(a, b){
+      return Array.minus(Array.union(a, b),Array.intersect(a, b));
+   };
+   
+   //两个数组并集
+   Array.union = function(a, b){
+      return a.concat(b).uniquelize();
+   };
+   
+   ```
+
+   
+
+2. 使用 ES6 语法实现
+
+   **ES6** 中可以借助扩展运算符（**...**）以及 **Set** 的特性实现相关计算，代码也会更加简单些。
+
+   ```js
+   var a = [1,2,3,4,5]
+   var b = [2,4,6,8,10]
+   console.log("数组a：", a);
+   console.log("数组b：", b);
+   
+   var sa = new Set(a);
+   var sb = new Set(b);
+   
+   // 交集
+   let intersect = a.filter(x => sb.has(x));
+   
+   // 差集
+   let minus = a.filter(x => !sb.has(x));
+   
+   // 补集
+   let complement  = [...a.filter(x => !sb.has(x)), ...b.filter(x => !sa.has(x))];
+   
+   // 并集
+   let unionSet = Array.from(new Set([...a, ...b]));
+   
+   ```
+
+3. 使用 jQuery 实现
+
+   ```js
+   var a = [1,2,3,4,5]
+   var b = [2,4,6,8,10]
+   console.log("数组a：", a);
+   console.log("数组b：", b);
+   
+   // 交集
+   let intersect = $(a).filter(b).toArray();
+   // 差集
+   let minus = $(a).not(b).toArray();
+   // 补集
+   let complement  = $(a).not(b).toArray().concat($(b).not(a).toArray());
+   // 并集
+   let unionSet = $.unique(a.concat(b));
+   
+   ```
+
+------
+
+#### 8.7 用正则和非正则实现1234567890.12=》1，234，567，890.12
+
+**参考答案：**
+
+非正则：
+
+如果数字带有小数点的话，可以使用toLocaleString()方法实现这个需求。
+
+```js
+b.toLocaleString();
+
+  let b=1234567890.12;
+  console.log(b.toLocaleString());  //1,234,567,890.12
+```
+
+正则：
+
+1. 不带小数点
+
+   ```js
+   let b=1234567890;
+   console.log(b.toString().replace(/(\d)(?=(?:\d{3})+$)/g,"$1,"));  //1,234,567,890
+   ```
+
+2. 带小数点
+
+- 判读是否带有小数点
+- 没有小数点，就用正则匹配实
+
+```js
+let num1=1234567890.32;
+let num2=1234567890;
+
+function numFormat(num) {
+    var c = (num.toString().indexOf ('.') !== -1) ? num.toLocaleString() : 
+             num.toString().replace(/(\d)(?=(?:\d{3})+$)/g, '$1,');
+    return c;
+}
+
+console.log(numFormat(num1));  //1,234,567,890.32
+console.log(numFormat(num2));  //1,234,567,890
+
+```
+
+------
+
+#### 8.8 写一个判断是否是空对象的函数
+
+**参考答案：**
+
+```js
+function isEmpty(value){
+	return (
+		value===null || value===undefined || (typeof value==="object" && Object.keys(value).length===0)
+		);
+}
+
+let str=[];
+console.log(isEmpty(str));  //true
+```
+
+------
+
+#### 8.9 代码题：颜色值16进制转10进制rgb
+
+**参考答案：**
+
+```js
+function toRGB(color){
+	var regex=/^#([0-9a-fA-F]{2})([0-9a-fA-F]{2})([0-9a-fA-F]{2})$/;  //匹配十六进制的正则
+	match=color.match(regex);  //// 判断是否是十六进制颜色值
+	return match ? 'rgb('+parseInt(match[1],16)+","+parseInt(match[2],16)+","+parseInt(match[3],16)+")" : color;
+}
+
+let str="#fd329b"
+console.log(toRGB(str));  //rgb(253,50,155)
+```
+
+
+
+------
+
+#### 8.10 传入 [1,[[2],3,4],5] ，返回 [1,2,3,4,5],即拉平数组
+
+**参考答案：**
+
+**递归**
+
+我们最一开始能想到的莫过于循环数组元素，如果还是一个数组，就递归调用该方法：
+
+```js
+// 方法 1
+var arr = [1, [2, [3, 4]]];
+
+function flatten(arr) {
+    var result = [];
+    for (var i = 0, len = arr.length; i < len; i++) {
+        if (Array.isArray(arr[i])) {
+            result = result.concat(flatten(arr[i]))
+        }
+        else {
+            result.push(arr[i])
+        }
+    }
+    return result;
+}
+console.log(flatten(arr))
+
+```
+
+**toString**
+
+如果数组的元素都是数字，那么我们可以考虑使用 toString 方法，因为：
+
+```js
+[1, [2, [3, 4]]].toString() // "1,2,3,4"
+```
+
+调用 toString 方法，返回了一个逗号分隔的扁平的字符串，这时候我们再 split，然后转成数字不就可以实现扁平化了吗？
+
+```js
+// 方法2
+var arr = [1, [2, [3, 4]]];
+
+function flatten(arr) {
+    return arr.toString().split(',').map(function(item){
+        return +item
+    })
+}
+
+console.log(flatten(arr))  //[ 1, 2, 3, 4 ]
+
+arr=[1, '1', 2, '2'];
+console.log(flatten(arr))  //[ 1, 1, 2, 2 ]
+```
+
+然而这种方法使用的场景却非常有限，如果数组是 [1, '1', 2, '2'] 的话，这种方法就会产生错误的结果。
+
+**reduce**
+
+既然是对数组进行处理，最终返回一个值，我们就可以考虑使用 reduce 来简化代码：
+
+```js
+// 方法3
+var arr = [1, [2, [3, 4]]];
+
+function flatten(arr) {
+    return arr.reduce(function(prev, next){
+        return prev.concat(Array.isArray(next) ? flatten(next) : next)
+    }, [])
+}
+console.log(flatten(arr))  //[ 1, 2, 3, 4 ]
+
+```
+
+**...**
+
+ES6 增加了扩展运算符，用于取出参数对象的所有可遍历属性，拷贝到当前对象之中：
+
+```js
+var arr = [1, [2, [3, 4]]];
+console.log([].concat(...arr)); // [1, 2, [3, 4]]
+
+```
+
+我们用这种方法只可以扁平一层，但是顺着这个方法一直思考，我们可以写出这样的方法：
+
+```js
+// 方法4
+var arr = [1, [2, [3, 4]]];
+
+function flatten(arr) {
+
+    while (arr.some(item => Array.isArray(item))) {
+        arr = [].concat(...arr);
+    }
+
+    return arr;
+}
+
+console.log(flatten(arr))  //[ 1, 2, 3, 4 ]
+
+```
+
+**undercore**
+
+那么如何写一个抽象的扁平函数，来方便我们的开发呢，所有又到了我们抄袭 underscore 的时候了~
+
+在这里直接给出源码和注释，但是要注意，这里的 flatten 函数并不是最终的 _.flatten，为了方便多个 API 进行调用，这里对扁平进行了更多的配置。
+
+```js
+/**
+ * 数组扁平化
+ * @param  {Array} input   要处理的数组
+ * @param  {boolean} shallow 是否只扁平一层
+ * @param  {boolean} strict  是否严格处理元素，下面有解释
+ * @param  {Array} output  这是为了方便递归而传递的参数
+ * 源码地址：https://github.com/jashkenas/underscore/blob/master/underscore.js#L528
+ */
+function flatten(input, shallow, strict, output) {
+
+    // 递归使用的时候会用到output
+    output = output || [];
+    var idx = output.length;
+
+    for (var i = 0, len = input.length; i < len; i++) {
+
+        var value = input[i];
+        // 如果是数组，就进行处理
+        if (Array.isArray(value)) {
+            // 如果是只扁平一层，遍历该数组，依此填入 output
+            if (shallow) {
+                var j = 0, length = value.length;
+                while (j < length) output[idx++] = value[j++];
+            }
+            // 如果是全部扁平就递归，传入已经处理的 output，递归中接着处理 output
+            else {
+                flatten(value, shallow, strict, output);
+                idx = output.length;
+            }
+        }
+        // 不是数组，根据 strict 的值判断是跳过不处理还是放入 output
+        else if (!strict){
+            output[idx++] = value;
+        }
+    }
+
+    return output;
+
+}
+
+var arr = [1, [2, [3, 4]]];
+
+console.log(flatten(arr,true,false))  //[ 1, 2, [ 3, 4 ] ]
+console.log(flatten(arr,false,false))  //[ 1, 2, 3, 4 ]
+```
+
+解释下 strict，在代码里我们可以看出，当遍历数组元素时，如果元素不是数组，就会对 strict 取反的结果进行判断，如果设置 strict 为 true，就会跳过不进行任何处理，这意味着可以过滤非数组的元素，举个例子：
+
+```js
+var arr = [1, 2, [3, 4]];
+console.log(flatten(arr, true, true)); // [3, 4]
+
+```
+
+那么设置 strict 到底有什么用呢？不急，我们先看下 shallow 和 strct 各种值对应的结果：
+
+- shallow true + strict false ：正常扁平一层
+- shallow false + strict false ：正常扁平所有层
+- shallow true + strict true ：去掉非数组元素
+- shallow false + strict true ： 返回一个[]
+
+我们看看 underscore 中哪些方法调用了 flatten 这个基本函数：
+
+**_.flatten**
+
+首先就是 _.flatten：
+
+```js
+_.flatten = function(array, shallow) {
+    return flatten(array, shallow, false);
+};
+
+```
+
+在正常的扁平中，我们并不需要去掉非数组元素。
+
+**_.union**
+
+接下来是 _.union：
+
+该函数传入多个数组，然后返回传入的数组的并集，
+
+举个例子：
+
+```js
+_.union([1, 2, 3], [101, 2, 1, 10], [2, 1]);
+=> [1, 2, 3, 101, 10]
+```
+
+如果传入的参数并不是数组，就会将该参数跳过：
+
+```js
+_.union([1, 2, 3], [101, 2, 1, 10], 4, 5);
+=> [1, 2, 3, 101, 10]
+```
+
+为了实现这个效果，我们可以将传入的所有数组扁平化，然后去重，因为只能传入数组，这时候我们直接设置 strict 为 true，就可以跳过传入的非数组的元素。
+
+```js
+// 关于 unique 可以查看《JavaScript专题之数组去重》[](https://github.com/mqyqingfeng/Blog/issues/27)
+function unique(array) {
+   return Array.from(new Set(array));
+}
+
+_.union = function() {
+    return unique(flatten(arguments, true, true));
+}
+```
+
+**_.difference**
+
+是不是感觉折腾 strict 有点用处了，我们再看一个 _.difference：
+
+语法为：
+
+```js
+_.difference(array, *others)
+```
+
+效果是取出来自 array 数组，并且不存在于多个 other 数组的元素。跟 _.union 一样，都会排除掉不是数组的元素。
+
+举个例子：
+
+```js
+_.difference([1, 2, 3, 4, 5], [5, 2, 10], [4], 3);
+=> [1, 3]
+
+```
+
+实现方法也很简单，扁平 others 的数组，筛选出 array 中不在扁平化数组中的值：
+
+```js
+function difference(array, ...rest) {
+
+    rest = flatten(rest, true, true);
+
+    return array.filter(function(item){
+        return rest.indexOf(item) === -1;
+    })
+}
+```
